# flam

./: README.md
EdgeDetectionApp/app/: build.gradle
EdgeDetectionApp/app/src/main/: AndroidManifest.xml
EdgeDetectionApp/app/src/main/cpp/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  native-lib.cpp
EdgeDetectionApp/app/src/main/java/com/example/edgedetection/: CameraController.kt  GLView.kt  MainActivity.kt
EdgeDetectionApp/app/src/main/res/layout/: activity_main.xml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/flame/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
